Configure -Xmx for daemons and workers in various tests